--- a/content/book/10/10.5.md
+++ b/content/book/10/10.5.md
@@ -4,20 +4,19 @@ metaTitle: '10.5. Шаблоны. Классы структур данных'
 metaDescription: '10.5. Шаблоны. Классы структур данных'
 ---
 
-10.5. Шаблоны. Классы структур данных
-Независимость от типов данных
+## Независимость от типов данных
+
 Любая структура данных и алгоритмы имеют дополнительную ценность, если они могут хранить и работать с данными различных типов. Такая универсальность  (или что одно и то же, независимость от данных) может быть достигнута в Си++ различными способами:
 
--        в обычном Си (см. 9.3) «переход от типа к типу» и абстрагирование от конкретного хранимого типа возможно на основе преобразования типов указателей и использования указателя void*, олицетворяющего «память вообще». Совместно с механизмом динамического связывания возможно создание алгоритмов, в которых фрагмент, ответственный за работу с конкретным типом данных, передается через указатель на функцию;
+- в обычном Си (см. 9.3) «переход от типа к типу» и абстрагирование от конкретного хранимого типа возможно на основе преобразования типов указателей и использования указателя void*, олицетворяющего «память вообще». Совместно с механизмом динамического связывания возможно создание алгоритмов, в которых фрагмент, ответственный за работу с конкретным типом данных, передается через указатель на функцию;
 
--        в Си++ на основе полиморфизма (виртуальных функций) (см.11.4) возможно создание интерфейсных классов, способных объединять единым механизмом доступа различные классы. Если эти классы являются «обертками» известных типов данных, то независимость от типов хранимых данных можно обеспечить ссылками на интерфейсный класс.
+- в Си++ на основе полиморфизма (виртуальных функций) (см.11.4) возможно создание интерфейсных классов, способных объединять единым механизмом доступа различные классы. Если эти классы являются «обертками» известных типов данных, то независимость от типов хранимых данных можно обеспечить ссылками на интерфейсный класс.
 
 Однако приведенные выше способы не обеспечивают синтаксической совместимости, т.е. они реализуются как технологические приемы, а не как элементы языка. По аналогии с переопределением операций (см. 10.3) хотелось бы использование естественного синтаксиса, где вместо int, double  и т.п. фигурировало бы абстрактное обозначение типа, например, T.
 
 Такое средство, позволяющее создавать заготовку функции или целого класса, в котором вместо конкретного имени типа данных будет фигурировать его символическое обозначение, называется шаблоном. В первом приближении смоделировать шаблон в обычном Си можно с использованием директив препроцессора для подстановки имен – define. Обозначив именами T и N тип и размерность массива, можно создать класс с использованием этих имен везде, где это необходимо.
 
- 
-
+```cpp
 //-------------------------------------------------------105-01.cpp
 
 // Имитация шаблона в обычном Си
@@ -65,18 +64,19 @@ void main(){
             for (int i=0;i<10;i++) A.add(B[i]);
 
             cout << A.remove(2) << endl; }
+```
 
 Чтобы применить ее для другого типа данных, нужно отредактировать директиву define, заменив, например, имя int на double. Но все же основным недостатком этой модели является однократность ее использования. В Си++ текстовая заготовка класса позволяет из одного описания создавать множество классов, отличающихся типом используемых объектов и размерностями данных.
 
 Итак, шаблон можно определить как текстовую заготовку определения класса с параметром, обозначающим тип используемых внутри переменных. Сразу же, не дожидаясь описания синтаксиса, отметим особенности трансляции шаблона:
 
--        шаблон является описанием группы классов, отличающихся используемым типом данных;
+- шаблон является описанием группы классов, отличающихся используемым типом данных;
 
--        при создании (определении) объекта шаблонного класса указывается тип данных, для которого он создается;
+- при создании (определении) объекта шаблонного класса указывается тип данных, для которого он создается;
 
--        при определении объекта шаблонного класса конкретный тип подставляется в шаблон вместо параметра и создается текстовая заготовка экземпляра класса, которая транслируется и дает собственный оригинальный программный код;
+- при определении объекта шаблонного класса конкретный тип подставляется в шаблон вместо параметра и создается текстовая заготовка экземпляра класса, которая транслируется и дает собственный оригинальный программный код;
 
--        и только затем происходит трансляция определения самого объекта.
+- и только затем происходит трансляция определения самого объекта.
 
 Самое главное, в отличие от обычных объектов, объект шаблонного класса требует отдельного экземпляра класса для того типа, который обозначен в объекте.
 
@@ -266,18 +266,18 @@ FIFO<x,50>                   c;
 Особенности разработки шаблонов структур данных
 Шаблон является исключительно средством подстановки, он ничего не меняет в ни в существе класса структуры данных, для которой строится шаблон, ни в принципах передачи объектов класса – параметров шаблона. Во-первых, это касается способа хранения объектов в структуре данных: она может содержать указатели, а может и сами объекты (копии, значения):
 
--        если шаблон хранит указатели на объекты, то он не касается проблем корректного копирования объектов и «не отвечает» за их создание и уничтожение. Деструктор шаблона обязан уничтожить динамические компоненты структуры данных (динамические массивы указателей, элементы списка), но он обычно не уничтожает хранимые объекты;
+- если шаблон хранит указатели на объекты, то он не касается проблем корректного копирования объектов и «не отвечает» за их создание и уничтожение. Деструктор шаблона обязан уничтожить динамические компоненты структуры данных (динамические массивы указателей, элементы списка), но он обычно не уничтожает хранимые объекты;
 
--        если шаблон хранит сами объекты, то он «должен быть уверен» в корректном копировании объектов при их записи и чтении из структуры данных (конструктор копирования о переопределение присваивания для объектов, содержащих динамические данные). При разрушении структуры данных разрушаются и копии хранимых в ней объектов.
+- если шаблон хранит сами объекты, то он «должен быть уверен» в корректном копировании объектов при их записи и чтении из структуры данных (конструктор копирования о переопределение присваивания для объектов, содержащих динамические данные). При разрушении структуры данных разрушаются и копии хранимых в ней объектов.
 
 Во-вторых, шаблон может использовать ряд стандартных операций по отношению к типу данных – параметру шаблона: присваивание (копирование), сравнение, а также ввод и вывод в стандартные потоки. При использовании шаблона с параметром – не базовым типом, а классом, необходимо следить, чтобы эти операции были в нем переопределены.
 
 Шаблоны классов списков
 Для представления списка или дерева необходимы две сущности: элементы списка (вершины дерева), связанные между собой и заголовок – указатель на первый элемент списка (корневую вершину). В технологии ООП есть два равноправных решения:
 
--        разрабатывается один класс, объекты которого играют разную роль в процессе работы класса. Первый объект – заголовок, создается программой (статически или динамически), доступен извне и не содержит данных (по крайней мере, в момент конструирования). Остальные объекты, содержащие данные, создаются динамически методами, работающими с первым объектом. Этот вариант имеет некоторые тонкости, связанные с тем, что программа должна уметь различать, где она работает с элементом списка, а где с элементом-заголовком;
+- разрабатывается один класс, объекты которого играют разную роль в процессе работы класса. Первый объект – заголовок, создается программой (статически или динамически), доступен извне и не содержит данных (по крайней мере, в момент конструирования). Остальные объекты, содержащие данные, создаются динамически методами, работающими с первым объектом. Этот вариант имеет некоторые тонкости, связанные с тем, что программа должна уметь различать, где она работает с элементом списка, а где с элементом-заголовком;
 
--        разрабатывается два класса – класс элементов списка и класс списка как такового, содержащего, как минимум, его заголовок. Объекты первого (вспомогательного) класса пользователем (программой, работающей с классом) не создаются. Они все – динамические, и их порождают методы второго (основного) класса;
+- разрабатывается два класса – класс элементов списка и класс списка как такового, содержащего, как минимум, его заголовок. Объекты первого (вспомогательного) класса пользователем (программой, работающей с классом) не создаются. Они все – динамические, и их порождают методы второго (основного) класса;
 
  
 
@@ -612,6 +612,7 @@ if (head==NULL || head->next==head) return;
 
  
 ## Шаблоны классов деревьев
+
 При программировании деревьев в технологии ООП рассмотренные выше технологические приемы получают свое дальнейшее развитие. Дело том, что рекурсивные алгоритмы, работающие с вершинами дерева, могут быть реализованы только в классе вершины. Текущий объект является текущей вершиной, с которой работает рекурсивный алгоритм, а рекурсивный вызов – это вызов того же самого метода для вершины – потомка. В редких случаях, когда имеет место жадный выбор очередного потомка, линейная рекурсия может быть реализована в цикле в классе самого дерева.
 
 Посмотрим, как будет выглядеть двоичное дерево (см. 8.5), реализованное в виде шаблона в системе классов – вершина дерева (node) и дерево (btree). В классе вершины реализуются все рекурсивные алгоритмы. Даже там, где имеет место линейная рекурсия, поскольку контекст текущей вершины позволяет «экономить синтаксис» и записывать выражения для доступа к вершинам в более короткой форме. Так, рекурсивный вызов метода get для левого потомка имеет вид l->get().
@@ -778,12 +779,15 @@ public:
 ```
 
 ## Немного об STL
+
 Шаблоны позволяют структурам данным абстрагироваться от их содержимого. А есть ли возможность алгоритмам абстрагироваться от структур данных. Такая возможность появляется, если для шаблонных классов структур данных создать классы объектов-движков, в функции которых входит позиционирование и доступ к хранимым элемента структур данных (аналоги операции i=0, A[i]=v, i++, i-- в массиве). Такие классы называют итераторами, они устанавливают стандартный синтаксис доступа к элементам структуры данных, через который разработанный алгоритм может быть применен к любой из них.
 
 ## Лабораторный практикум
+
 Разработать шаблон класса структуры данных с параметром – типом хранимых объектов T, включая «джентльменский набор» операций: конструктор «пустой» структуры данных, деструктор, операции добавления, включения и исключения по логическому номеру, сортировки и включения с сохранением порядка (при наличии в T стандартной операции сравнения). Разработать также методы сохранения и загрузки структуры данных из стандартного текстового потока при наличии переопределенных операций << и >> для  потока и объектов хранимого класса. Загрузку структуры данных из стандартного потока производить в создаваемые для этой цели динамические объекты. В качестве вариантов использовать любые известные структуры данных.
 
 ## Вопросы без ответов
+
 Определить вид структуры данных, создаваемой шаблоном, а также значения всех переменных после выполнения main.
 
  
